welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:5: error: not found: value estSurOrange
while(!estSurOrange)
       ^