welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var nbBiscuits:Int = 0
var nbPas:Int = 0

while(!estSurOrange)
{

for(c <- 1 to 5)
{
	avance()
}
		if(nbBiscuits >= 3)
		{
			droite();
		}
		else
		{
			gauche()
		}
}